Closed Bug 1276630 Opened 8 years ago Closed 8 years ago

[Static Analysis][Uninitialized pointer field] In constructor PaintBGParams

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox49 --- wontfix
firefox51 --- fixed

People

(Reporter: andi, Assigned: andi)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: CID 1362110)

Attachments

(1 file)

The Static Analysis tool Coverity added that |frame| and |layer| are not initialized. As we are trying to push this patch: Bug 525063 we must prepare our base code in order to be able to integrate it.
Comment on attachment 8757901 [details]
MozReview Request: Bug 1276630 - initialize member variables |frame|, |layer| and removed default-initialization for |paintFlags| and |compositionOp|. r?dbaron

https://reviewboard.mozilla.org/r/56260/#review52946

r=dbaron, although at this point it seems like it would be better to pass the paint flags and composition op as well (and remove their default-initialization), probably in the same order that they're passed to the factory methods.  Would you mind writing an additional patch for that?
Attachment #8757901 - Flags: review?(dbaron) → review+
Comment on attachment 8757901 [details]
MozReview Request: Bug 1276630 - initialize member variables |frame|, |layer| and removed default-initialization for |paintFlags| and |compositionOp|. r?dbaron

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/56260/diff/1-2/
Attachment #8757901 - Attachment description: MozReview Request: Bug 1276630 - initialize member variables |frame| and |layer|. r?dbaron → MozReview Request: Bug 1276630 - initialize member variables |frame|, |layer| and removed default-initialization for |paintFlags| and |compositionOp|. r?dbaron
Pushed by bpostelnicu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fd166af53b59
initialize member variables |frame|, |layer| and removed default-initialization for |paintFlags| and |compositionOp|. r=dbaron
https://hg.mozilla.org/mozilla-central/rev/fd166af53b59
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: