Bug 1276630 - initialize member variables |frame|, |layer| and removed default-initialization for |paintFlags| and |compositionOp|. r=dbaron

MozReview-Commit-ID: 1T1FHQp3S8t

--HG--
extra : rebase_source : a4e3a7c8d34ea92cb9737a1f79384559b9932b0c